# NetPulse-Monitor

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  llms.md
.github/workflows/: build.yml
include/App/: ApplicationController.hpp  Config.hpp
include/Data/: ConnectionInfo.hpp  ConnectionProvider.hpp  ExternalAPIProvider.hpp  IDataProvider.hpp  NetworkDeviceProvider.hpp  PacketSnifferProvider.hpp  RequestEntry.hpp  SystemInfoProvider.hpp
include/Render/: BlockRenderers.hpp  ConnectionVisualizer.hpp  DashboardRenderer.hpp  IRenderer.hpp  PanelLayout.hpp  UIDrawUtils.hpp  UIFormatUtils.hpp
include/Render/UI/: Button.hpp  Panel.hpp  TextBlock.hpp
include/Utils/: DataManager.hpp  Logger.hpp  NetworkUtils.hpp  RootCheck.hpp  ThreadSafeQueue.hpp
src/: main.cpp
src/App/: ApplicationController.cpp
src/Data/: ConnectionProvider.cpp  ExternalAPIProvider.cpp  NetworkDeviceProvider.cpp  PacketSnifferProvider.cpp  SystemInfoProvider.cpp
src/Render/: BlockRenderers.cpp  ConnectionVisualizer.cpp  DashboardRenderer.cpp  UIDrawUtils.cpp  UIFormatUtils.cpp
src/Render/UI/: Button.cpp  Panel.cpp  TextBlock.cpp
src/Utils/: Logger.cpp  NetworkUtils.cpp  RootCheck.cpp
